@@ -11,91 +11,94 @@ visual: recommended
 
 ## Why This Exists
 
-This topic explains gc algorithms comparison because it solves a concrete problem that becomes visible once the naive version starts to fail.
+Concept: GC Algorithms Comparison.
 
 ## The Pain Before It
 
-Before gc algorithms comparison, the code often works for a tiny case but becomes hard to trust once edge cases, state, or reuse enter the picture.
+
 
 ## Java Creator Mindset
 
-A Java designer would ask what rule needs to be made visible so the safer choice is also the clearer one.
+Make the rule behind gc algorithms comparison obvious so the safer choice is also the clearer one.
 
 ## How You Might Invent It
 
-- Serial GC keeps things simple for small heaps.
-- Parallel GC maximizes throughput.
-- G1 aims for predictable pauses.
-- Comparison table:
-
-| GC | Best for | Main tradeoff |
-| --- | --- | --- |
-| Serial | tiny heaps | single-threaded pauses |
-| Parallel | throughput | longer pauses than low-latency collectors |
-| G1 | balanced workloads | more tuning than serial |
-| ZGC | huge heaps, low latency | newer and more specialized |
+1. Run the Java file once without changing it.
+2. Change one input or one line.
+3. Compare the new output with the explanation.
 
 ## Naive Attempt
 
-The first attempt usually uses direct code and leaves too much behavior implicit.
+The naive version is to use gc algorithms comparison without checking what rule it is supposed to protect.
 
 ## Why It Breaks
 
-That version breaks when the same assumption no longer holds in real code, especially around edge cases, state, or repeated use.
+If you ignore the rule behind gc algorithms comparison, the example becomes harder to trust.
+
+Edge cases usually show the bug first.
 
 ## Final Java Solution
 
-Java's final form for gc algorithms comparison makes the important rule visible and repeatable instead of hiding it inside ad hoc code.
+Use the Java file to make the rule behind gc algorithms comparison explicit and repeatable.
+
+Run [GcAlgorithmsComparison.java](GcAlgorithmsComparison.java) as the source of truth for the example.
 
 ## Code
 
-Run [GcAlgorithmsComparison.java](GcAlgorithmsComparison.java) and focus on the runnable example first. Then compare the output with the explanation below.
+Run [GcAlgorithmsComparison.java](GcAlgorithmsComparison.java) and compare the output with the explanation below.
+
+```java
+    public static void main(String[] args) {
+        System.out.println("Concept: different GC algorithms optimize different tradeoffs.");
+        System.out.println("Serial GC = single-threaded, simple, small heaps");
+        System.out.println("Parallel GC = throughput focused, multi-threaded");
+        System.out.println("G1 GC = region based, predictable pauses");
+        System.out.println("ZGC = concurrent compaction, sub-10ms pauses");
+        System.out.println("Shenandoah = concurrent evacuation");
+        System.out.println("Flags: -XX:+UseG1GC, -XX:+UseZGC");
+        System.out.println("Why it matters: the best GC depends on latency target, heap size, and throughput needs.");
+    }
+```
 
 ## Walkthrough
 
-1. Identify the starting state or input.
-2. Run the example once without changing anything.
-3. Change one line or one input.
-4. Compare the new result with the rule the topic is teaching.
+1. Run the Java file once without changing it.
+2. Change one input or one line.
+3. Compare the new output with the explanation.
+
+What to observe:
+
+- Check whether the output matches the rule in the comment header.
+- Check whether the edge case you changed still behaves as expected.
 
 ## Mental Model
 
-- Serial GC keeps things simple for small heaps.
-- Parallel GC maximizes throughput.
-- G1 aims for predictable pauses.
-- Comparison table:
-
-| GC | Best for | Main tradeoff |
-| --- | --- | --- |
-| Serial | tiny heaps | single-threaded pauses |
-| Parallel | throughput | longer pauses than low-latency collectors |
-| G1 | balanced workloads | more tuning than serial |
-| ZGC | huge heaps, low latency | newer and more specialized |
+- What rule is being enforced?
+- What changes when you change one input?
+- What does the output prove about the rule?
 
 ## Mistakes
 
-- memorizing syntax before the problem
-- assuming the tiny example covers every case
-- changing the rule without rerunning the example
+- reading GC Algorithms Comparison as syntax instead of a rule
+- changing more than one thing at once
+- skipping the runnable file and only reading the prose
 
 ## Tradeoffs
 
-Gain: clearer behavior or safer code.
+The gain is clarity or correctness.
 
-Cost: a bit more structure or one more rule to remember.
-
-Question: is the extra rule cheaper than the bug it prevents?
+The cost is usually one more rule, one more API, or one more concept to remember.
 
 ## Use / Avoid
 
-Use it when the rule removes a real bug or removes guesswork.
+Use it when the problem in the header comment matches the real code you are writing.
 
-Avoid it when direct code is already clearer and just as safe.
+Avoid it when a simpler loop, local variable, or direct call already expresses the rule clearly.
 
 ## Practice
 
-Change one input in [GcAlgorithmsComparison.java](GcAlgorithmsComparison.java), rerun it, and write down what changed.
+Change one line in [GcAlgorithmsComparison.java](GcAlgorithmsComparison.java), rerun it, and write down what changed before and after the edit.
 
 ## Summary
 
-After this topic, you should be able to explain the problem it solves, the rule Java enforces, and the smallest change that proves you understand it.
+After this topic, you should be able to explain why GC Algorithms Comparison exists, what problem it solves, and what the runnable file proves.
